# warming

./: Cargo.toml  Makefile
crates/adapters/: Cargo.toml
crates/adapters/src/: lib.rs  local_midi.rs  prelude.rs
crates/adapters/src/persistence/: mod.rs
crates/adapters/src/persistence/sqlite/: db.rs  mod.rs  models.rs  repos.rs
crates/app/: Cargo.toml
crates/app/src/: app_error.rs  lib.rs  prelude.rs
crates/app/src/learning/: command.rs  event_handler.rs  port.rs  query.rs
crates/app/src/music/: command.rs  event_handler.rs  local_library.rs  mod.rs  port.rs  query.rs
crates/domain/src/: lib.rs  prelude.rs
crates/domain/src/learning/: entity.rs  event.rs  value_object.rs
crates/domain/src/music/: entity.rs  event.rs  mod.rs  value_object.rs
crates/infra/: Cargo.toml
crates/infra/src/: setup.rs
crates/ui/: Cargo.toml  README.md  warming.sqlite3
